--- a/index.html
+++ b/index.html
@@ -213,10 +213,10 @@
 			<footer id="footer">
 				<ul class="icons">
 					
-					<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+					<li><a href="https://www.linkedin.com/in/madhavievana/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 					
-					<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+					<li><a href="https://github.com/Mevana" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href=""mailto:madhavievana03@gmail.com"" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
 					<<li>&copy;Madhavi Evana. All rights reserved.</li>
