--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 			<footer id="footer">
 				<ul class="icons">
 					
-					<li><a href="https://www.linkedin.com/in/madhavievana/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+					<li><a href="https://www.linkedin.com/in/madhavievana/" target ="_blank" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 					
 					<li><a href="https://github.com/Mevana" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 					<li><a href=""mailto:madhavievana03@gmail.com"" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
