--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
 					
 					<li><a href="https://www.linkedin.com/in/madhavievana/" target ="_blank" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 					
-					<li><a href="https://github.com/Mevana" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href=""mailto:madhavievana03@gmail.com"" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+					<li><a href="https://github.com/Mevana" target ="_blank" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="mailto:madhavievana03@gmail.com" target ="_blank" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
 					<<li>&copy;Madhavi Evana. All rights reserved.</li>
