--- a/Projects.html
+++ b/Projects.html
@@ -17,7 +17,7 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html">Madhavi Evana</a></h1>
+					<h1 id="logo"><a href="Projects">Madhavi Evana</a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
