--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 							</ul>
 						</li>
 						<li>
-							<a href="elements.html">
+							<a href="Courses.html">
 								Courses
 							</a>
 						</li>
