--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 			<!-- Header -->
 			<header id="header">
-				<h1 id="logo"><a href="Home.html">Madhavi Evana</a></h1>
+				<h1 id="logo"><a href="index.html">Madhavi Evana</a></h1>
 
 				<nav id="nav">
 					<ul>
@@ -43,7 +43,7 @@
 							</ul>
 						</li>
 						<li>
-							<a href="Courses.html">
+							<a href="elements.html">
 								Courses
 							</a>
 						</li>
