--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 							Welcome to my Portfolio<br />
 						</p>
 					</header>
-					<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+					<span class="image"><img src="images/pic01.jpeg" alt="" /></span>
 				</div>
 				<a href="#one" class="goto-next scrolly">Next</a>
 			</section>
