has have change

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 								<p>
 									I am a Data Scientist who enjoys looking for data-driven solutions and is passionate about implementing machine learning and deep learning to create
 									solutions that are pragmatic and easy to interpret. I am motivated by the belief that data can be used to make better decisions. I want to be able to make it easier
-									for people to understand code and use data efficiently. I primarily use Python, but also has experience with R and Java.
+									for people to understand code and use data efficiently. I primarily use Python, but also have experience with R and Java.
 								</p>
 							</div>
 							<div class="col-4 col-12-medium">
